--- a/webapp/WEB-INF/views/best/bestplus.html
+++ b/webapp/WEB-INF/views/best/bestplus.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
-<link rel="stylesheet" href="../../../assets/css/bestplus.css"
-	type="text/css">
+<title>Bestplus</title>
+<link href="../../../assets/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="../../../assets/css/bestplus.css" type="text/css">
 
 </head>
 <body>
 
 	<div id="wrap">
+	
 		<div id="header">
-			<a href="../main/index.html"><img id="logo"
-				src="../../../assets/image/main/logo.jpg"></a>
+			<a href="../main/index.html"><img id="logo" src="../../../assets/image/main/logo.jpg"></a>
 
 			<div id="login">
 				<ul>
@@ -24,7 +24,7 @@
 
 			<div id="nav">
 				<ul>
-					<li><a href="../together/together.html">함깨하기</a></li>
+					<li><a href="../together/together.html">함께하기</a></li>
 					<li><a href="../board/board.html">게시판</a></li>
 					<li><a href="../best/best.html">베스트</a></li>
 					<li><a href="../map/map.html">지도</a></li>
@@ -33,6 +33,7 @@
 			<!-- nav -->
 		</div>
 <!---------------------------------------- header --------------------------------------->
+
 	<div class="content"> 	
 		<h1>Best</h1>
 
@@ -60,35 +61,31 @@
 			</ul>
 		</div>
 
-		<hr class="one">
+		<hr id="hr">
 
 
 		<!-- Top1~3 -->
 		<div class="img-total">
 
-			<div class="img-1">
-				<p>
-					Top 1 <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\cgold.jpg" />
-				</p>
-				<p>
-					Top 2 <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\csilver.jpg" />
-				</p>
-				<p>
-					Top 3 <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\cbronze.jpg" />
-				</p>
+			<!-- 왕관 이미지 -->
+			<div class="img-1">		
+				<p>Top 1 <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\cgold.jpg" /></p>
+				<p>Top 2 <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\csilver.jpg" /></p>
+				<p>Top 3 <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\cbronze.jpg" /></p>
 			</div>
 
 			<br> <br> <br>
-
+			
+			<!-- Top 1~3 게시물 -->
 			<div class="img-line">
 				<div class="img-list">
 					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\sw1.jpg" />
 						<span id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span> 🅽</span></a>
 				
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a href=""></a> <br> 
 							<input type="button" id="cbutton" name="button" value="후기 : 3개" >
 					</div>
 				</div>
@@ -97,9 +94,9 @@
 					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
 						<span id="best-text"> 지역 : <span>부산</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a href=""></a> <br> 
 							<input type="button" id="cbutton" name="button" value="후기 : 3개">
 					</div>
 				</div>
@@ -108,14 +105,14 @@
 					<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
 						<span id="best-text"> 지역 : <span>인천</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a href=""></a> <br> 
 							<input type="button" id="cbutton" name="button" value="후기 : 3개">					</div>
 				</div>
 			</div>
 		</div>
-
+		<!-- //Top 1~3 게시물// -->
 		<br> <br> <br>
 
 		<hr class="one">
@@ -129,9 +126,9 @@
 					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
 						<span id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a href=""></a> <br> 
 							<input type="button" id="cbutton" name="button" value="후기 : 3개">
 					</div>
 				</div>
@@ -140,9 +137,9 @@
 					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
 						<span id="best-text"> 지역 : <span>부산</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a	href=""></a> <br> 
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a	href=""></a> <br> 
 							<input type="button" id="cbutton" name="button" value="후기 : 0개">
 					</div>
 				</div>
@@ -151,15 +148,16 @@
 					<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
 						<span id="best-text"> 지역 : <span>인천</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a href=""></a> <br> 
 							<input type="button" id="cbutton" name="button" value="후기 : 0개">
 					</div>
 				</div>
 			</div>
 		</div>
 		<hr class="one">
+		
 		<!-- Top 7~9 -->
 		<div class="img-total2">
 			<div class="img-line">
@@ -169,9 +167,9 @@
 					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
 						<span id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a href=""></a> <br> 
 							<input type="button" id="cbutton" name="button" value="후기 : 3개">
 					</div>
 				</div>
@@ -180,9 +178,9 @@
 					<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
 						<span id="best-text"> 지역 : <span>부산</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a	href=""></a> <br> 
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a	href=""></a> <br> 
 							<input type="button" id="cbutton" name="button" value="후기 : 0개">
 					</div>
 				</div>
@@ -191,10 +189,10 @@
 					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
 						<span id="best-text"> 지역 : <span>인천</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" id="cbutton" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
-							<input type="button" name="button" value="후기 : 0개">
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a href=""></a> <br> 
+							<input type="button" id="cbutton" name="button" value="후기 : 0개">
 					</div>
 				</div>
 			</div>
@@ -210,9 +208,9 @@
 					<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
 						<span id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a href=""></a> <br> 
 							<input type="button" id="cbutton" name="button" value="후기 : 3개">
 					</div>
 				</div>
@@ -221,9 +219,9 @@
 					<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
 						<span id="best-text"> 지역 : <span>부산</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a	href=""></a> <br> 
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a	href=""></a> <br> 
 							<input type="button" id="cbutton" name="button" value="후기 : 0개">
 					</div>
 				</div>
@@ -232,9 +230,9 @@
 					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
 						<span id="best-text"> 지역 : <span>인천</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a href=""></a> <br> 
 							<input type="button"  id="cbutton"name="button" value="후기 : 0개">
 					</div>
 				</div>
@@ -251,9 +249,9 @@
 					<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
 						<span id="best-text"> 지역 : <span>서울</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a href=""></a> <br> 
 							<input type="button" id="cbutton" name="button" value="후기 : 3개">
 					</div>
 				</div>
@@ -262,9 +260,9 @@
 					<a href=""> <img src="C:\javaStudy\JOA_GroupProject\webapp\assets\image\best\map.jpg" />
 						<span id="best-text"> 지역 : <span>부산</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a	href=""></a> <br> 
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a	href=""></a> <br> 
 							<input type="button" id="cbutton" name="button" value="후기 : 0개">
 					</div>
 				</div>
@@ -273,9 +271,9 @@
 					<a href=""> <img src="C:\javaStudy\workspace_web\JOA\webapp\assets\images\poo613.jpg" />
 						<span id="best-text"> 지역 : <span>인천</span> | 거리 : <span>1km</span></span></a>
 					<div class="comment-text">
-						<input type="text" name="comment" value="私の名前はウヨンウです。" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="댓글이오" size="43"><a href=""></a> 
-							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="43"><a href=""></a> <br> 
+						<input type="text" name="comment" value="私の名前はウヨンウです。" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="댓글이오" size="40"><a href=""></a> 
+							<input type="text" name="comment" value="와타시노 나마에와 우투더여응투더우!" size="40"><a href=""></a> <br> 
 							<input type="button" id="cbutton" name="button" value="후기 : 0개">
 					</div>
 				</div>
@@ -292,8 +290,7 @@
 				<p>사업자 번호 : 123-456-789</p>
 				<p>서울특별시 관악구 봉천동 862 - 1</p>
 				<br>
-				<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일,
-					공휴일 휴무)</p>
+				<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일, 공휴일 휴무)</p>
 				<p>Tel. 02 - 1111 - 1111</p>
 				<p>Fax. 02 - 1111 - 1111</p>
 				<p>Email. joa@joa.co.kr</p>
