--- a/webapp/WEB-INF/views/main/index.html
+++ b/webapp/WEB-INF/views/main/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>JOA Main</title>
-<link rel="stylesheet" href="../../../assets/css/main.css"
-	type="text/css">
+<link href="../../../assets/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="../../../assets/css/main.css" type="text/css">
 
 </head>
 <body>
