--- a/webapp/WEB-INF/views/user/login-form.html
+++ b/webapp/WEB-INF/views/user/login-form.html
@@ -27,9 +27,26 @@
 				</ul>
 			</div> <!-- nav -->
 		</div> <!-- header -->
-		
-		<div id="content">
 			
+		<div id="content">
+			<div id="login-form">
+				<h2>로그인</h2>
+				<hr>
+				<p>서비스 이용을 위해 로그인 해주세요.</p>
+				<div id="form-container">
+					<form action="" method="post">
+						<label for="id">아이디</label><br>
+						<input id="id" name="id" type="text"><br>
+						<label for="password">비밀번호</label><br>
+						<input id="password" name="password" type="password"><br>
+						<p>
+							<a href="">회훤가입</a>
+							<a href="">비밀번호 재설정</a>
+						</p>
+						<button id="btn-submit" type="button">로그인</button>
+					</form>
+				</div><!-- form-container -->
+			</div><!-- login-form -->
 		</div> <!-- content -->
 		
 		<div class="footer">
