--- a/webapp/WEB-INF/views/course/c_viewForm.html
+++ b/webapp/WEB-INF/views/course/c_viewForm.html
@@ -49,8 +49,11 @@
 			<div class="course-view-info">
 				<div class="course-info-content">
 					<h2>코스제목</h2>
+					
+					<!-- 수정 버튼 -->
 					<a href=""><span class="glyphicon glyphicon-pencil"></span></a>
 					
+					<!-- 즐겨찾기 별 -->
 					<img class="right" alt="즐겨찾기" src="../../../assets/image/main/star-off.png">
 					
 					<div class="article-info">
@@ -111,7 +114,7 @@
 					</div>
 				</div>
 				
-				<!-- 하단버튼 -->
+				<!-- 하단 버튼 영역 -->
 				<div id="course-info-btn">
 					<a class="link-btn">후기 보러가기</a>
 					<a class="like-btn">
