--- a/webapp/WEB-INF/views/course/r_viewForm.html
+++ b/webapp/WEB-INF/views/course/r_viewForm.html
@@ -43,6 +43,7 @@
 			<!-- 코스 정보 -->
 			<div class="course-view-info">
 				
+				<!-- 리스트 필터 -->
 				<div class="record-filter">
 					<input type="radio" name="record-filter" id="all" checked>
 					<label for="all">전체</label>
@@ -51,6 +52,8 @@
 					<label for="myrecord">내가 쓴 기록</label>
 				</div>
 				
+				
+				<!-- 기록 리스트 -->
 				<div class="record-info-content">
 					<ul>
 						<li>
@@ -200,6 +203,8 @@
 					</ul>
 				</div>
 				
+				
+				<!-- 하단 버튼 영역 -->
 				<div id="course-info-btn">
 					<a class="link-btn">기록 작성하기</a>
 					<a class="like-btn">
