--- a/webapp/WEB-INF/views/course/r_writeForm.html
+++ b/webapp/WEB-INF/views/course/r_writeForm.html
@@ -38,7 +38,6 @@
 				<tr>
 					<th>코스</th>
 					
-					
 					<td>
 						<div class="course-info">
 							<div>
@@ -113,12 +112,15 @@
 					<col width="100%">
 				</colgroup>
 				
+				<!-- 날짜 -->
 				<tr>
 					<th>날짜</th>
 					<td colspan="3">
 						<input class="txt-short" type="date">
 					</td>
 				</tr>
+				
+				<!-- 날씨, 기온 -->
 				<tr>
 					<th>날씨</th>
 					<td>
@@ -147,6 +149,8 @@
 					</td>
 				</tr>
 				
+				
+				<!-- 종목 -->
 				<tr>
 					<th>종목</th>
 					<td colspan="3">
@@ -170,6 +174,7 @@
 					</td>
 				</tr>
 				
+				<!-- 시간 -->
 				<tr>
 					<th>시간</th>
 					<td colspan="3">
@@ -180,8 +185,9 @@
 					</td>
 				</tr>
 				
+				<!-- 난이도 -->
 				<tr>
-					<th>예상 난이도</th>
+					<th>난이도</th>
 					<td colspan="3">
 						<input type="radio" name="level" id="easy" checked>
 						<label for="easy">쉬움</label>
@@ -194,6 +200,7 @@
 					</td>
 				</tr>
 				
+				<!-- 한줄평 -->
 				<tr>
 					<th>한줄평</th>
 					<td colspan="3">
