--- a/webapp/assets/css/course.css
+++ b/webapp/assets/css/course.css
@@ -44,7 +44,7 @@ input[type=radio] {display:none;}
 
 /* -----------------------테이블 설정---------------------- */
 /* 테이블 선 */
-#content .course-form {
+#content .course-form table {
 	margin-bottom: 50px;
 	border: 1px solid rgb(204, 204, 204);
 }
@@ -56,6 +56,8 @@ input[type=radio] {display:none;}
 	font-size: 18px;
 	font-weight: 700;
 	text-align: center;
+	border: 1px solid rgb(204, 204, 204);
+	border-bottom: none;
 }
 
 /* 테이블 */
@@ -73,6 +75,9 @@ input[type=radio] {display:none;}
 .course-form table tr td {
 	padding: 12px 20px;
 	border-top: 1px solid rgb(204, 204, 204);
+}
+.course-form .course-select th, .course-form .course-select td {
+	border-top: none;
 }
 
 
@@ -178,6 +183,7 @@ label img {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin-bottom: 50px;
 }
 .course-form #course-pic div #photo-icon {
 	display: block;
