--- a/webapp/WEB-INF/views/course/r_viewForm.html
+++ b/webapp/WEB-INF/views/course/r_viewForm.html
@@ -55,11 +55,15 @@
 				<!-- 상단 탭 -->
 				<div class="course-view-tap">
 					<ul>
-						<li class="tabbtn">
-							<a href="">코스정보</a>
+						<li>
+							<div class="tabbtn" style="cursor: pointer;" onclick="window.location='/c_viewform.html';">
+								<a>코스정보</a>
+							</div>
 						</li>
-						<li class="tabbtn selected">
-							<a href="">기록보기</a>
+						<li>
+							<div class="tabbtn selected" style="cursor: pointer;" onclick="window.location='/c_viewform.html';">
+								<a>기록보기</a>
+							</div>
 						</li>
 					</ul>
 				</div>
