--- a/webapp/assets/css/course_view.css
+++ b/webapp/assets/css/course_view.css
@@ -37,6 +37,7 @@ input[type=radio] {display:none;}
 	float: left;
 	font-size: 16px;
 	text-align: center;
+	color: rgb(34, 34, 34);
 	background-color: rgb(255,255,255);
 	border: 1px solid rgb(174, 174, 174);
 }
@@ -50,7 +51,7 @@ input[type=radio] {display:none;}
 #content .course-view .course-view-info {
 	padding: 20px 32px;
 	width: 100%;
-	height: 510px;
+	height: 650px;
 	border: 1px solid rgb(174, 174, 174);
 }
 
@@ -62,7 +63,7 @@ input[type=radio] {display:none;}
 	height: 190px;
 }
 .course-view-info .record-status {
-	height: 220px;
+	height: 350px;
 }
 .course-view-info .course-info-btn {
 	height: 60px;
@@ -126,15 +127,8 @@ input[type=radio] {display:none;}
 .record-status .graph-choose label {color: rgb(170, 170, 170); margin-left:5px;}
 .record-status .graph-choose input[type="radio"]:checked + label {color: black;	font-weight: 700;}
 
-.record-status .graphs {
+.record-status #graphs {
 	width: 100%;
-	height: 140px;
-}
-.record-status .graphs #myChart {
-	position: relative;
-	width: 100px;
-	height: 140px;
-	
 }
 
 /* ===================================코스 정보==================================== */
@@ -146,7 +140,7 @@ input[type=radio] {display:none;}
 	height: 20px;
 }
 .course-view-info .record-info-content {
-	height: 380px;
+	height: 510px;
 	overflow: auto;
 }
 .record-info-content::-webkit-scrollbar {
